spacing fixed in responsive

--- a/src/scss/themes/_footer.scss
+++ b/src/scss/themes/_footer.scss
@@ -42,3 +42,12 @@
     }
   }
 }
+@media (max-width: 576px) {
+  .footer-links-wrapper{
+    padding-left: 20px;
+    .footer-links{
+      padding-top: 10px;
+    }
+  }
+  
+}
